--- a/bot/.env.example
+++ b/bot/.env.example
@@ -1,6 +1,9 @@
 KEY= # 0x... the private key of the bot wallet (with the 0x prefix)
 MSG_LOG=false # logs the message on the console (optional)
-XMTP_ENV=dev # dev or production (optional) not required for production
+XMTP_ENV=dev
 OPENAI_API_KEY=
+API_KEY=
+API_BASE_URL_PROD=
+API_BASE_URL_DEV=
 MANAGER_ADDRESS=
 COMPLIANCE_OFFICER_ADDRESS=
